prod-ready-configs/notification-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deploy
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification-service
          image: docker.io/abelaa/notification-service:1.1
          imagePullPolicy: Always
