prod-ready-configs/jwks-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: jwks
  labels:
    app: jwks
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: jwks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwks
  labels:
    app: jwks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwks
  template:
    metadata:
      labels:
        app: jwks
    spec:
      volumes:
        - name: public-key
          configMap:
            name: jwt-public-key
      containers:
        - name: jwks
          image: docker.io/tinsae/jwks-server:3.0.3
          volumeMounts:
            - name: public-key
              mountPath: app/key
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
