prod-ready-configs/review-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: review
  labels:
    app: review
    service: review
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: review

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - image: docker.io/tinsae/review-app:2.0.0
          imagePullPolicy: IfNotPresent
          name: review
          ports:
            - containerPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/reviews
      route:
        - destination:
            host: review
            port:
              number: 3000
