prod-ready-configs/shoppingcart-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart-deploy
  labels:
    app: shopping-cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-cart
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
        - name: shopping-cart-service
          image: docker.io/romeomugwa/shoppingcart-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
  labels:
    app: shopping-cart
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: shopping-cart
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-cart-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /carts
      route:
        - destination:
            host: shopping-cart
            port:
              number: 80
