prod-ready-configs/user-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      volumes:
        - name: private-key
          secret:
            secretName: jwt-private-key
      containers:
        - name: user
          image: docker.io/javaethio/userimage:0.0.14
          volumeMounts:
            - name: private-key
              mountPath: /etc/jwt
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/users
      route:
        - destination:
            host: user
            port:
              number: 3000
