prod-ready-configs/zipkin-grafana-kiali-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ziplin-grafana-kiali-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /zipkin
      route:
        - destination:
            host: zipkin.istio-system.svc.cluster.local
            port:
              number: 9411
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
